# HORUS

./: README.md  env.example  gitignore  pyproject.toml
Claude_skill/: skill.md
demo_Result/: README.md  baseline_results.json  result.json  result_demo1.json  result_demo2.json  result_demo3.json  result_demo4_fake.json  result_demo4_no_context.json  result_demo4_with_context.json  result_demo5_no_context.json  result_demo5_with_context.json
horus/: __init__.py  emotion_analysis.py  skill.md
