[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horus-emotion"
version = "0.1.0"
description = "𓂀 HORUS — Hierarchical Observation & Recognition with Universal Sight. CRLM-based 8-Layer Multimodal Emotion Analysis Pipeline."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Masamichi Iizumi", email = "info@miosync.com"}
]
keywords = [
    "emotion-recognition",
    "multimodal",
    "CRLM",
    "cultural-lens",
    "LLM",
    "computer-vision",
    "affective-computing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/miosync-inc/horus"
Repository = "https://github.com/miosync-inc/horus"
Issues = "https://github.com/miosync-inc/horus/issues"

[project.scripts]
horus = "horus.emotion_analysis:main"

[tool.setuptools.packages.find]
include = ["horus*"]
